- rename main en app_manager

--- a/compta/index.html
+++ b/compta/index.html
@@ -157,9 +157,13 @@
     <script src="categories_viewer.js"></script>
 
     <script src="app_controller.js"></script>
-    <script src="main.js"></script>
+    <script src="app_manager.js"></script>
 
     <script src="test.js"></script>
+
+    <script>
+        app_manager_start();
+    </script>
 </body>
 
 </html>
