--- a/compta/index.html
+++ b/compta/index.html
@@ -137,7 +137,9 @@
     <script src="util.js"></script>
     <script src="storage.js"></script>
     <script src="../common/display.js"></script>
-    <script src="display.js"></script>
+
+    <script src="components.js"></script>
+
     <script src="io.js"></script>
 
     <script src="notice_controller.js"></script>
