- refacto app_controller + impact

--- a/compta/index.html
+++ b/compta/index.html
@@ -43,7 +43,7 @@
                     Les colonnes 1, 3 et 7 sont respectivement : quand, quoi et combien.
                 </p>
 
-                <input type="file" id="triggerImportCSVTransactions" accept=".csv" hidden />
+                <input type="file" id="inputImportCSVTransactions" accept=".csv" hidden />
                 <img src="../img/icons8-import-csv-64.png" onclick="actionImportTransactions()" class="impex">
                 Dernier import : <span id="lastImportDate_transactions"></span>
 
@@ -59,7 +59,7 @@
                     <li>Soit editer le fichier CSV et importer</li>
                 </ul>
                 <br>
-                <input type="file" id="triggerImportCSVCategories" accept=".csv" hidden />
+                <input type="file" id="inputImportCSVCategories" accept=".csv" hidden />
                 <img src="../img/icons8-import-csv-64.png" onclick="actionImportCategories()" class="impex">
                 Dernier import : <span id="lastImportDate_categories"></span>
 
@@ -68,7 +68,7 @@
 
                 <h2>3. Budget</h2>
                 <p>
-                    <input type="file" id="triggerImportCSVBudget" accept=".csv" hidden />
+                    <input type="file" id="inputImportCSVBudget" accept=".csv" hidden />
                     <img src="../img/icons8-import-csv-64.png" onclick="actionImportBudget()" class="impex">
 
                     Dernier import : <span id="lastImportDate_budget"></span>
