--- a/compta/index.html
+++ b/compta/index.html
@@ -29,6 +29,7 @@
         <input type="file" accept=".csv" id="inputImportCSVBudget">
     </div>
     <div id="view_synthese" class="view"></div>
+    <div id="view_incomes" class="view"></div>
     <div id="view_transactions" class="view"></div>
     <div id="view_budget" class="view"></div>
     <script src="app.js"></script>
