--- a/planning/index.html
+++ b/planning/index.html
@@ -10,9 +10,10 @@
 
 <body>
     <div id="container">
+        <div id="today"></div><br>
         <div class="menu">
             <button id="btn_add_event" onclick="showFormAddEvent(event)">New</button>
-            <button id="btn_show_month" onclick="showMonthCal(event)">Mois</button>
+            <button id="btn_show_month" onclick="showCal(event)">Mois</button>
             <button id="btn_current_week" onclick="showWeek(event)">Week</button>
         </div>
         <div id="form_add_event" hidden>
@@ -26,33 +27,56 @@
             <input type="number" step="1" min="0" max="23" id="event_hours"> :
             <input type="number" step="1" min="0" max="59" id="event_minutes">
             <br>
+            Note: <textarea id="event_note" rows="3" cols="50"></textarea><br>
             <button onclick="cal_addEvent()">OK</button>
             <br>
+            <div id="current_month"></div>
+
         </div>
-        <div id="month_cal" hidden></div>
-        <div id="current_week" hidden></div>
+        <div id="cal" hidden>
+            <div class="three_month">
+                <div id="month_1"></div>
+                <div id="month_2"></div>
+                <div id="month_3"></div>
+            </div>
+            <div class="three_month">
+                <div id="month_4"></div>
+                <div id="month_5"></div>
+                <div id="month_6"></div>
+            </div>
+            <div class="three_month">
+                <div id="month_7"></div>
+                <div id="month_8"></div>
+                <div id="month_9"></div>
+            </div>
+            <div class="three_month">
+                <div id="month_10"></div>
+                <div id="month_11"></div>
+                <div id="month_12"></div>
+            </div>
+        </div>
+        <div id="current_week"></div>
     </div>
 
     <script src="main.js"></script>
     <script>
         function resetAll() {
             document.getElementById("current_week").style.display = "none";
-            document.getElementById("month_cal").style.display = "none";
+            document.getElementById("cal").style.display = "none";
             document.getElementById("form_add_event").style.display = "none";
         }
         function showFormAddEvent(event) {
             resetAll();
             document.getElementById("form_add_event").style.display = "block";
-            document.getElementById("month_cal").style.display = "block";
         }
         function showWeek() {
             resetAll();
             document.getElementById("current_week").style.display = "block";
         }
 
-        function showMonthCal() {
+        function showCal() {
             resetAll();
-            document.getElementById("month_cal").style.display = "block";
+            document.getElementById("cal").style.display = "block";
         }
 
         document.getElementById("event_year").value = (new Date(Date.now())).getFullYear();
