[planning] :  button prev week

--- a/planning/index.html
+++ b/planning/index.html
@@ -62,7 +62,7 @@
             <pre id="current_week"></pre>
             <br>
             <div class="panel">
-                <button onclick="prevWeek()">...Prev</button>
+                <button onclick="action_prevWeek()">...Prev</button>
                 <button onclick="action_nextWeek()">Next...</button>
                 <select id="search_mois">
                     <option value="0">Jan</option>
