--- a/index.html
+++ b/index.html
@@ -4,11 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="manifest" href="manifest.json" />
+
     <title>K_manager</title>
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <div>Kmanager yeah!</div>
+    <script src="worker.js"></script>
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('worker.js')
+                    .then(registration => {
+                        console.log('Service Worker enregistré avec succès :', registration.scope);
+                    })
+                    .catch(error => {
+                        console.log('Erreur lors de l’enregistrement du Service Worker :', error);
+                    });
+            });
+        }
+
+    </script>
 </body>
 
 </html>
