[planning] v1.4.0-beta: - feat. acces offline notes et compa - feat. events triés par ordre chrono - enf. version d'app dynamique - enf. readme doc - feat. prefix 0 heure, min, date

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
     <div>Kmanager yeah!</div>
+    <script src="app_params.js"></script>
     <script src="worker.js"></script>
     <script>
         if ('serviceWorker' in navigator) {
