--- a/index.html
+++ b/index.html
@@ -8,30 +8,72 @@
 
     <title>K_manager</title>
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <style>
+        html {
+            background-color: rgb(235, 235, 235);
+        }
+
+        a {
+            all: unset;
+            display: inline-block;
+            width: 20px;
+            padding: 15px;
+            background-color: #e5ff8a;
+            font-weight: bold;
+            text-align: center;
+            border-radius: 4px;
+            border: solid 2px black;
+        }
+
+        .menu {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 180px;
+            width: 100%;
+        }
+
+        #p {
+            background-color: #57d5c6;
+        }
+
+        #c {
+            background-color: #ff8cb6;
+        }
+
+        #n {
+            background-color: #ffe14a;
+        }
+    </style>
 </head>
 
 <body>
-    <div>Kmanager <span id="app_version"></span> (by <span id="app_author"></span>)
-        <script src="worker.js"></script>
-        <script>
-            document.getElementById('app_version').innerText = localStorage.getItem('app_version');
-            document.getElementById('app_author').innerText = localStorage.getItem('app_author');
+    <div>Kmanager <span id="app_version"></span> (by <span id="app_author"></span>)</div>
+    <div class="menu">
+        <a id="p" href="planning/index.html">#P</a>
+        <a id="c" href="compta/index.html">€C</a>
+        <a id="n" href="notes/index.html">!N</a>
+    </div>
+    <script src="worker.js"></script>
+    <script>
+        document.getElementById('app_version').innerText = localStorage.getItem('app_version');
+        document.getElementById('app_author').innerText = localStorage.getItem('app_author');
 
-            if ('serviceWorker' in navigator) {
-                window.addEventListener('load', () => {
-                    navigator.serviceWorker.register('worker.js')
-                        .then(registration => {
-                            console.log('Service Worker enregistré avec succès :', registration.scope);
-                            localStorage.setItem("app_version", APP.version);
-                            localStorage.setItem("app_author", APP.author);
-                        })
-                        .catch(error => {
-                            console.log('Erreur lors de l’enregistrement du Service Worker :', error);
-                        });
-                });
-            }
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('worker.js')
+                    .then(registration => {
+                        console.log('Service Worker enregistré avec succès :', registration.scope);
+                        localStorage.setItem("app_version", APP.version);
+                        localStorage.setItem("app_author", APP.author);
+                    })
+                    .catch(error => {
+                        console.log('Erreur lors de l’enregistrement du Service Worker :', error);
+                    });
+            });
+        }
 
-        </script>
+    </script>
 </body>
 
 </html>
